--- a/client/src/Styles/App.css
+++ b/client/src/Styles/App.css
@@ -1,30 +1,50 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100..700&display=swap");
 @media screen and (max-width: 600px) {
   .container {
-    padding: 0rem;
-    margin: 0 2rem !important;
+    padding: 1rem 5em !important;
   }
-  .container .aligning-container {
+  .container .heading {
+    font-size: 1.95rem;
+  }
+  .container .form {
+    width: 100%;
+    margin: auto;
+  }
+  .container .table-container {
+    max-width: 100% !important;
+    display: block;
+  }
+  .container .table-container .table {
+    width: 100% !important;
+    display: block;
+  }
+  .container .table-container .table tr {
+    margin: 1rem 0;
+  }
+  .container .table-container .table th, .container .table-container .table tr, .container .table-container .table td, .container .table-container .table a {
     display: flex;
-    justify-content: center !important;
+    align-items: center;
+    justify-content: space-around;
+    background-color: hsl(236, 23%, 23%);
+    color: hsl(233, 11%, 84%);
+    transition: all 0.5s ease-in-out;
+    font-size: 1rem;
+    padding: 0.5em;
+  }
+  .container .table-container .table th, .container .table-container .table tr, .container .table-container .table td {
+    border: none;
+    outline: none;
+  }
+  tr td .original-url {
+    flex-basis: 10px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .container {
+    max-width: 900px !important;
   }
   .container .heading {
     font-size: 1.7rem;
-  }
-  .container form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .container form fieldset {
-    width: 90%;
-  }
-  .container form fieldset input {
-    width: 60%;
-  }
-  .container form fieldset button {
-    width: 30%;
-    margin: 0.5rem auto;
   }
   .container .table-container {
     display: block;
