--- a/client/src/Styles/_heading.scss
+++ b/client/src/Styles/_heading.scss
@@ -1,5 +1,6 @@
 .heading{
     font-size: 2rem;
     font-weight: 400;
-    letter-spacing: 2px;
+    letter-spacing: 5px;
+    transition: all 0.5rem ease-in;
 }
